--- a/templates/login_center.html
+++ b/templates/login_center.html
@@ -1,13 +1,21 @@
-{% block title %}Register Account{% endblock %}
+{% block title %}Loggin Account{% endblock %}
 {% block sub_content %}
-
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 <form action="/login" id="login" name="loginform" method="POST">
   {% csrf_token %}
   <hr>
 
     <label for="email">Email</label>
     <input type="text" name="email" placeholder="john@example.com" />
-    <label for="center">Email</label>
+    <label for="district">District</label>
+    <input type="text" name="district" placeholder="thane" />
+    <label for="center">Center</label>
     <input type="text" name="center" placeholder="Vashi" />
     <label for="password">Password</label>
     <input type="password" name="password" placeholder="******" />
