--- a/templates/register.html
+++ b/templates/register.html
@@ -30,6 +30,15 @@
   {{ form.password2 }}
   <label>{{ form.aadharNumber.label }}</label>
 {{ form.aadharNumber }}
+
+<label>{{ form.center_name.label }}</label>
+{{ form.center_name }}
+
+<label>{{ form.district_name.label }}</label>
+{{ form.district_name }}
+
+<label>{{ form.key.label }}</label>
+{{ form.key }}
   <button type="submit">Register</button>
 
 </form>
