--- a/templates/loggedin_district.html
+++ b/templates/loggedin_district.html
@@ -1,30 +1,55 @@
-{% block content %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <title>Document</title>
+</head>
+<body>
+    {% block content %}
 
-    <div class="items">
+        <form action='/centeradd_upload' method="POST">
+            {% csrf_token %}
+            <table>
+                <tr>
+                    <th>Name</th>
+                </tr>
+                <tr>
+                    <td><input type="text" id="name" name="name" /></td>
+                    <br>
+                </tr>
+                <tr>
+                    <td></td>
+                </tr>
+            </table>
+            <br>
+            <input type="submit" id="add" value="Add center" />
+        </form>
 
         <br><br>
-        <div class="items-1">
-            <form id="addelement" action='/centeradd_upload' method="POST">
-                {% csrf_token %}
-                <table id="my-table">
-                    <tr>
-                        <th>Name</th>
-                    </tr>
-                    <tr>
-                        <td><input type="text" id="name" name="name" /></td>
-                        <br>
-                    </tr>
-                    <tr class="last-row">
-                        <td></td>
-                    </tr>
-                </table>
-                <br>
 
-                <input type="submit" id="add" value="Add item" />
-            </form>
-    
-            <br><br>
-        </div>
-    </div>
+        <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">Center ID</th>
+                <th scope="col">Center Name</th>
+              </tr>
+            </thead>
+            <tbody>
+            {% for center in centers %}
+              <tr>
+                <th scope="row">{{center.centerPrimaryKey}}</th>
+                <td>{{center.name}}</td>
+              </tr>
+            {% endfor %}
+            </tbody>
+          </table>
 
     {% endblock content %}
+</body>
+</html>
