ronak-center add

--- a/templates/loggedin_district.html
+++ b/templates/loggedin_district.html
@@ -38,6 +38,7 @@
               <tr>
                 <th scope="col">Center ID</th>
                 <th scope="col">Center Name</th>
+                <th scope="col">UUID</th>
               </tr>
             </thead>
             <tbody>
@@ -45,6 +46,7 @@
               <tr>
                 <th scope="row">{{center.centerPrimaryKey}}</th>
                 <td>{{center.name}}</td>
+                <td>{{center.centerId.urn}}</td>
               </tr>
             {% endfor %}
             </tbody>
