Cleanup of unused files. Dashboard creation. Base.html added. form validation login form changed. models.py changed to new model names(district admin to district center admin to center. uuid further seecured)

--- a/templates/provideaccess.html
+++ b/templates/provideaccess.html
@@ -1,3 +1,7 @@
+{% extends 'base.html' %}
+
+{% block content %}
+
 {% block title %} Give Access {% endblock %}
 {% block sub_content %}
 <form class="account-form" action="/provideaccess" method="POST">
@@ -27,4 +31,6 @@
 
 </form>
 
-{% endblock %}
+{% endblock sub_content %}
+
+{% endblock content %}
